tests/assets/test_suites/w3c_wsdl20/documents/good/Storage-5G/storage.wsdl
<?xml version="1.0" encoding="utf-8" ?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/Storage-5G/storage.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<description xmlns="http://www.w3.org/ns/wsdl"
		 targetNamespace="http://example.org/soapStorage"
		 xmlns:tns="http://example.org/soapStorage"
		 xmlns:wsoap="http://www.w3.org/ns/wsdl/soap">

		 <types>
		 		 <xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"
		 		 		 targetNamespace="http://example.org/soapStorage">

		 		 		 <xs:element name="basicContent" type="xs:base64Binary"/>
		 		 		 <xs:element name="advancedContent" type="xs:base64Binary"/>
		 		 		 <xs:element name="basicAcknowledgement" type="xs:boolean" />
		 		 		 <xs:element name="advancedAcknowledgement" type="tns:tAcknowledgement" />
		 		 		 <xs:complexType name="tAcknowledgement">
		 		 		 		 <xs:sequence>
		 		 		 		 		 <xs:element name="date" type="xs:date" />
		 		 		 		 		 <xs:element name="status" type="xs:string" />
		 		 		 		 		 <xs:element name="size" type="xs:int" />
		 		 		 		 </xs:sequence>
		 		 		 </xs:complexType>
		 		 </xs:schema>
		 </types>

		 <interface name="baseInterface">
		 		 <operation name="basicstore"
		 		 		 pattern="http://www.w3.org/ns/wsdl/in-out">
		 		 		 <input element="tns:basicContent" />
		 		 		 <output element="tns:basicAcknowledgement" />
		 		 </operation>
		 </interface>

		 <interface name="extendedInterface" extends="tns:baseInterface">
		 		 <operation name="advancedstore"
		 		 		 pattern="http://www.w3.org/ns/wsdl/in-out">
		 		 		 <input element="tns:advancedContent" />
		 		 		 <output element="tns:advancedAcknowledgement" />
		 		 </operation>
		 </interface>

		 <binding name="storageBinding"
		 		 type="http://www.w3.org/ns/wsdl/soap"
		 		 wsoap:protocol="http://www.w3.org/2003/05/soap/bindings/HTTP/">
		 </binding>

		 <service name="storageService"
		 		 interface="tns:extendedInterface">

		 		 <endpoint name="storageEndpoint"
		 		 		 binding="tns:storageBinding"
		 		 		 address="http://example.org/storageService" />

		 </service>

</description>

