tests/assets/test_suites/w3c_wsdl20/documents/bad/Binding-3B/NonUniqueBinding.wsdl
<description xmlns="http://www.w3.org/ns/wsdl"
	xmlns:tns="http://www.wso2.com/wsdl/2006/interop/EchoService"
	xmlns:wsoap="http://www.w3.org/ns/wsdl/soap"
	xmlns:whttp="http://www.w3.org/ns/wsdl/http"
	xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
	targetNamespace="http://www.wso2.com/wsdl/2006/interop/EchoService"
	xmlns:wwis="http://www.wso2.com/schemas/2006/interop/EchoService">
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/Binding-3B/NonUniqueBinding.wsdl -->
<!-- Copyright © 2007-03-23 05:52 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->

	<documentation>
		This is a bad WSDL that violates the assertion 57. The binding
		on the WSDL has non unique name property.
	</documentation>

	<types>
		<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"
			xmlns="http://www.wso2.com/schemas/2006/interop/EchoService"
			targetNamespace="http://www.wso2.com/schemas/2006/interop/EchoService"
			elementFormDefault="unqualified"
			attributeFormDefault="unqualified">
			<xs:element type="tEchoString" name="echoString" />
			<xs:complexType name="tEchoString">
				<xs:sequence>
					<xs:element type="xs:string" name="echoStringParam" />
				</xs:sequence>
			</xs:complexType>
			<xs:element type="xs:string" name="echoStringResponse" />

			<xs:element type="tEchoXML" name="echoXML" />
			<xs:complexType name="tEchoXML">
				<xs:sequence>
					<xs:element type="xs:anyType" name="echoXMLParam" />
				</xs:sequence>
			</xs:complexType>
			<xs:element type="xs:anyType" name="echoXMLResponse" />

		</xs:schema>
	</types>
	<interface name="echoServiceInterface">
		<operation pattern="http://www.w3.org/ns/wsdl/in-out"
			name="echoString">
			<input element="wwis:echoString" messageLabel="In" />
			<output element="wwis:echoStringResponse"
				messageLabel="Out" />
		</operation>
		<operation pattern="http://www.w3.org/ns/wsdl/in-out"
			name="echoXML">
			<input element="wwis:echoXML" messageLabel="In" />
			<output element="wwis:echoXMLResponse" messageLabel="Out" />
		</operation>
	</interface>
	<binding interface="tns:echoServiceInterface"
		type="http://www.w3.org/ns/wsdl/soap" name="echoServiceBinding"
		wsoap:protocol="http://www.w3.org/2003/05/soap/bindings/HTTP/">
		<operation
			wsoap:mep="http://www.w3.org/2003/05/soap/mep/soap-response"
			ref="tns:echoString" />
		<operation
			wsoap:mep="http://www.w3.org/2003/05/soap/mep/soap-response"
			ref="echoXML" />
	</binding>


</description>
